# template-project

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: plotting.ipynb  quickstart.ipynb  scikit-learn.ipynb
scripts/: setup-poetry.sh
src/: add_numbers.py
tests/: test_add_numbers.py
